Реализация спринта 6: исправление тестов для Java 8 и рефакторинг